--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ header li {
     font-weight: bold;
 }
 
-.about-text p {
+.about-item p {
     margin-bottom: 24px;
 }
 
@@ -59,4 +59,15 @@ header li {
     margin: 16px;  
 } 
 
+.news-item {
+    margin: 0 auto;
+    width: 80%;
+    border-top: 1px solid #000;
+
+}
+
+.news-item p {
+    padding: 16px 0;
+    border-bottom: 1px solid #000;
+}
 
