--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,12 +62,16 @@ header li {
 .news-item {
     margin: 0 auto;
     width: 80%;
-    border-top: 1px solid #000;
+    border-top: 1px solid rgb(171, 143, 143);
 
 }
 
 .news-item p {
-    padding: 16px 0;
-    border-bottom: 1px solid #000;
+    padding: 16px ;
+    border-bottom: 1px solid rgb(171, 143, 143);
+    font-size: 16px;
 }
 
+.news-date {
+    margin-right: 80px;
+}
