--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,6 +76,53 @@ header li {
     margin-right: 80px;
 }
 
-.container-form {
+.contact-form {
+    border: 1px solid black;
+    width: 85%;
+    padding: 10px;
+}
+
+.contact-wrap {
+    padding: 0 4%;
+}
+
+.label-name {
+    width: 15%;
+}
+
+.contact-item {
+    display: flex;
+    margin: 16px 0;
+}
+
+.submit-bottan {
+    background-color: black;
+    padding: 15px 0px;
+    width: 200px;
+    color: white;
+    text-align: center;
+    margin: 32px auto 0;
+}
+
+footer {
+    background-color: black;
+    padding: 16px;
+}
+
+footer p {
+    text-align: center;
+    color: white;
+    font-size: 12px;
     
 }
+@media screen and (max-width: 960px) {
+    footer p  {
+      color: red;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    footer p  {
+      color: blue;
+    }
+  }
