--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,20 +3,44 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 280px;
+    padding: 0 4%;
+    margin: 0 auto;
 }
 
 header h1 {
     font-size: 24px;
     font-weight: bold;
-    margin-left: 240px;
+    margin:0;
+    padding: 0;
 }
+
+@media screen and (max-width: 600px) {
+    header  {
+        height: auto;
+        max-width: 100%;
+        flex-direction: column;   
+     }
+  }
+
+  @media screen and (max-width: 600px) {
+      header h1 {
+        margin-top: 24px;
+      }
+    }
+
 
 .list {
     display: flex;
 }
 
+@media screen and (max-width: 600px) {
+    .list {
+        margin: 8px 0;
+    }
+}
+
 header li {
-    margin-right: 32px;
+    margin-right: 24px;
 }
 
 .header-img {
@@ -115,10 +139,10 @@ footer p {
     font-size: 12px;
     
 }
-@media screen and (max-width: 960px) {
-    footer p  {
-      color: red;
-    }
+@media screen and (max-width: 500px) {
+    .header  {
+        flex-direction: column;   
+     }
   }
 
   @media screen and (max-width: 500px) {
