--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,12 +48,28 @@ header li {
     height: 25px;
 }
 
-.main-img {
+.pc-img {
     width: 100%;
     height: 420px;
     object-fit: cover;
+    display: block;
+}
+.sp-img {
+    display: none;
 }
 
+@media screen and (max-width: 600px) {
+    .pc-img {
+        display: none;
+    }
+    .sp-img {
+        display: block;
+        width: 100%;
+        height: 420px;
+        object-fit: cover;
+
+    }
+}
 .section-container {
     margin: 0 auto 130px auto;
     max-width: 960px;
@@ -139,14 +155,3 @@ footer p {
     font-size: 12px;
     
 }
-@media screen and (max-width: 500px) {
-    .header  {
-        flex-direction: column;   
-     }
-  }
-
-  @media screen and (max-width: 500px) {
-    footer p  {
-      color: blue;
-    }
-  }
