--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,8 +95,7 @@ header li {
 .works-img {
     width: 240px;
     height: 160px; 
-    margin: 16px;
-    max-width: 100%;  
+    margin: 16px; 
 } 
 
 @media screen and (max-width: 600px) {
@@ -104,11 +103,11 @@ header li {
         display: block;
     }
     .works-img {
-        width: 552px;
-        height: 339px;
-
+        width: 100%;
+        height: 100%;
+        margin-top: 16px;
     }
-}
+}       
 
 .news-item {
     margin: 0 auto;
